fix mobile title wrapping

--- a/style.css
+++ b/style.css
@@ -67,9 +67,14 @@ header {
   margin: 15px 20px 0;
 }
 header h1 {
-  font-size: 24px;
+  font-size: 20px;
   margin: 0;
   line-height: 1.3;
+}
+@media (min-width: 600px) {
+  header h1 {
+    font-size: 24px;
+  }
 }
 .title-wrap {
   flex-direction: row;
